--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button>oi, tudo bem?</button>8
+    <button>oi, tudo bem?</button>
 </body>
 </html>
